# firn

./: .bazelrc  BAZEL.md  BUILD.md  README.md  sandbox.go
polars/: cast_test.go  dataframe.go  dataframe_linux_amd64.go  dataframe_test.go  expr.go  firn.h  join.go  opcodes.go  series.go  types.go
rust/: Cargo.toml
rust/src/: dataframe.rs  execution.rs  opcodes.rs
