[package]
name = "firn"
version = "0.1.0"
edition = "2021"

[lib]
name = "firn"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
polars = { version = "0.44", features = [
    "lazy",
    "csv",
    "json",
    "parquet",
    "strings",
    "temporal",
    "dtype-full",
    "regex",
    "sql",
    "cloud",
    "aws",
] }
polars-sql = "0.44"
polars-io =  { version = "0.44", features = [
    "json",
    "parquet",
    "csv",
    "cloud",
    "aws",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
